# matter-thread

./: .bashrc  CHIP-TOOL.md  HA.md  HA2.md  HOME_ASSISTANT.md  How_to_setup_and_work_with_ESP-IDF_and_ESP-Matter.docx  How_to_setup_and_work_with_Matter_Controller.docx  How_to_setup_and_work_with_OpenThread_Border_Router.docx  INSTALL.md  LIST_OF_EXAMPLES.md  MATTER_CONTROLLER.md  OPENTHREAD.md  PAIRING.md  README.md  basic_thread_border_router.md  chip-tool.txt  esp-matter-mfg-tool.md  install-esp-matter.md  otbr_list.txt  otcli_cmds.txt  rloc16.md  samba.md  wsl_bugs.txt  ~$w_to_setup_and_work_with_ESP-IDF_and_ESP-Matter.docx
apps/: clusters.txt  (+1 more)
apps/mike_h2_sensors/main/: CMakeLists.txt  app_main.cpp  app_priv.h  idf_component.yml  led_config.h
apps/mike_h2_sensors/main/drivers/: app_driver.cpp  driver_led_indicator.cpp  hc_sr04.c  hc_sr04.h  hc_sr501.c  hc_sr501.h  rcwl_0516.c  rcwl_0516.h  sensor_driver.c  sensor_driver.cpp  sensor_driver.h
apps/mike_on_off/main/: CMakeLists.txt  Kconfig.projbuild  app_driver.cpp  app_main.cpp  app_priv.h  idf_component.yml
apps/mike_on_off/main/drivers/: driver_app.cpp  driver_chip.cpp  driver_chip.h  driver_led_indicator.cpp  driver_led_indicator.h  driver_relay.cpp  driver_relay.h  driver_reset_button.cpp  driver_reset_button.h  driver_ssd1306.cpp  driver_ssd1306.h  driver_thread.cpp  driver_thread.h  driver_time.cpp  driver_time.h  driver_uptime.cpp  driver_uptime.h
apps/mike_on_off/main/includes/: utils.c  utils.h
apps/mike_on_off/main/plugins/: matter_ids_decoder.cpp  matter_ids_decoder.h  plugin_custom_cluster.cpp  (+3 more)
(+397 files in other folders)
